--- a/index.html
+++ b/index.html
@@ -18,6 +18,41 @@
   </style>
 </head>
 <body>
-  
+  <div id="app">
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-6">
+          <label>From</label>
+          <select class="form-control">
+            <option value="Currecy">Currency</option>
+            <option value="Currecy">Currency</option>
+            <option value="Currecy">Currency</option>
+          </select>
+        </div>
+        <div class="col-md-6">
+            <label>To</label>
+          <select class="form-control">
+            <option value="Currecy">Currency</option>
+            <option value="Currecy">Currency</option>
+            <option value="Currecy">Currency</option>
+          </select>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <input type="text" class="my-5 form-control" placeholder="Amount to convert ...">
+          <div class="text-center">
+              <button class="btn btn-lg btn-primary">Convert</button>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <h1 class="text-center mt-5 display-2">56.223</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </body>
 </html>
