--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="col-md-6 offset-md-3">
           <input type="text" class="my-5 form-control" v-model="amount" placeholder="Amount to convert ...">
           <div class="text-center">
-              <button @click="convertCurrency" class="btn btn-lg btn-primary">Convert</button>
+              <button :disabled="invalidData" @click="convertCurrency" class="btn btn-lg btn-primary">Convert</button>
           </div>
         </div>
       </div>
